Fix the alignment

--- a/themes/kross-hugo/assets/css/style.css
+++ b/themes/kross-hugo/assets/css/style.css
@@ -193,6 +193,10 @@ a {
   height: 25px;
 }
 
+.card-body {
+  text-align: left;
+}
+
 body {
   background-color: #fff;
   overflow-x: hidden
